# renderer

./: CMakeLists.txt  README.md  temp
include/: camera.h  error.h  geometry.h  imageWriter.h  intersection.h  jsonHelper.h  kdtree.h  scene.h  shape.h  shapeFactory.h
include/BxDF/: bxdf.h  bxdfFactory.h
include/Integrator/: directLighting.h  integrator.h  integratorFactory.h  pathtracer.h
include/Lights/: areaLight.h  light.h  lightFactory.h  planeLight.h  pointLight.h
include/Primitives/: primPlane.h  primSphere.h  primitive.h  triangle.h
include/Shapes/: meshobj.h  plane.h  shape.h  shapeFactory.h  sphere.h
include/Spectra/: rgbSpectrum.h
src/: camera.cpp  geometry.cpp  imageWriter.cpp  intersection.cpp  jsonHelper.cpp  kdtree.cpp  main.cpp  scene.cpp
src/BxDF/: bxdf.cpp
src/Integrator/: directLighting.cpp  integrator.cpp  pathtracer.cpp
src/Lights/: areaLight.cpp  planeLight.cpp  pointLight.cpp
src/Primitives/: primPlane.cpp  primSphere.cpp  triangle.cpp
src/Shapes/: meshobj.cpp  plane.cpp  sphere.cpp
src/Spectra/: rgbSpectrum.cpp
